@@ -1,5 +1,6 @@
 == 3.4.6 ==
 
+* Fixed BuddyPress pages protection issue
 * Fixed upgrade and initial installation issues
 * Fixed communication emails sending issue
 * Fixed communication message subscription plan selection
